# player

./: README.md  gradle.properties  settings.gradle
effectPlayer/: build.gradle
effectPlayer/src/main/: AndroidManifest.xml
effectPlayer/src/main/java/com/jiayz/effectplayer/: MainActivity.kt
effectPlayer/src/main/res/values/: strings.xml
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: AndroidLog.h  PlayStatus.h  Playstatus.cpp  SoakAudio.cpp  SoakAudio.h  SoakAudioChannel.cpp  SoakAudioChannel.h  SoakBasePlayer.cpp  SoakBasePlayer.h  SoakCallJava.h  SoakFFmpeg.cpp  SoakFFmpeg.h  SoakJavaCall.cpp  SoakJavaCall.h  SoakPlayStatus.cpp  SoakPlayStatus.h  SoakPlayer.cpp  SoakQueue.cpp  SoakQueue.h  SoakStataus.h  SoakVideo.cpp  SoakVideo.h
ffmpeg/src/main/cpp/include/: config.h
ffmpeg/src/main/cpp/include/aarch64/: config.h
ffmpeg/src/main/cpp/include/arm/: config.h
ffmpeg/src/main/cpp/include/lame/: lame_global_flags.h
ffmpeg/src/main/cpp/include/libavutil/: utils_log.h
ffmpeg/src/main/cpp/include/x264/: x264.h  x264_config.h
ffmpeg/src/main/cpp/player/: PlayStatus.cpp  PlayStatus.h  SoakAudio.cpp  SoakAudio.h  SoakCallJava.cpp  SoakCallJava.h  SoakFFmpeg.cpp  SoakFFmpeg.h  SoakPlayer.cpp  SoakQueue.cpp  SoakQueue.h  SoakVideo.cpp  SoakVideo.h
ffmpeg/src/main/java/com/jiayz/ffmpeg/listener/: SoakOnCompleteListener.java  SoakOnCutVideoImgListener.java  SoakOnErrorListener.java  SoakOnGlSurfaceViewOnCreateListener.java  SoakOnInfoListener.java  SoakOnLoadListener.java  SoakOnPreparedListener.java  SoakOnRenderRefreshListener.java  SoakOnStopListener.java  SoakOnVideoSizeChangedListener.java  SoakStatus.java
ffmpeg/src/main/java/com/jiayz/ffmpeg/model/: SoakTimeInfo.java  SoakVideoSizeInfo.java
ffmpeg/src/main/java/com/jiayz/ffmpeg/opengles/: SoakGLSurfaceView.java  SoakGlRender.java  SoakGlSurfaceView.java  SoakRender.java  SoakShaderUtils.java
ffmpeg/src/main/java/com/jiayz/ffmpeg/soakplayer/: SoakPlayer.java  SoakTimeBean.java
ffmpeg/src/main/java/com/jiayz/ffmpeg/util/: LogUtils.java  PermissionUtils.java  ScreenUtils.java  SoakLog.java  SoakTimeUtil.java  TimeUtils.java  VideoSupportUtils.java
ffmpeg/src/main/res/raw/: fragment_mediacodec_play.glsl  fragment_yuv_play.glsl  vertex_shader_play.glsl
gradle/wrapper/: gradle-wrapper.properties
player/: build.gradle
player/src/main/: AndroidManifest.xml
player/src/main/java/com/jiayz/player/: Extensions.kt  MainActivity.kt
player/src/main/res/layout/: activity_main.xml
player/src/main/res/values/: strings.xml  themes.xml
player/src/main/res/values-night/: themes.xml
